--- a/style/style.css
+++ b/style/style.css
@@ -160,7 +160,7 @@ background: #6B4B6B;;
     vertical-align: middle;
     width: 100%;
 }
-.categories__link{
+.categories_link{
     font-weight: 400;
     font-size: 15px;
     line-height: 18px;
