--- a/style/media.css
+++ b/style/media.css
@@ -37,6 +37,13 @@
         padding: 10px 10px;
         gap: 10px;
     }
+    .nav-link{
+    padding: 5px 5px;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+    border: none;
+    }
     .categories{
         text-align: center;
     }
